--- a/application/src/main/res/layout/fragment_txbroadcast.xml
+++ b/application/src/main/res/layout/fragment_txbroadcast.xml
@@ -17,16 +17,29 @@
         android:text="NodeService"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ToggleNodeService"
         android:id="@+id/toggleButton"
+        android:checked="false"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Testnet"
+        android:id="@+id/testnet"
+        android:layout_alignBottom="@+id/toggleButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:checked="false" />
+
 
     <Space
         android:layout_width="20px"
@@ -52,17 +65,58 @@
         android:id="@+id/messageText"
         android:layout_below="@+id/view2"
         android:layout_centerHorizontal="true"
-        android:hint="Enter Raw Transaction"
+        android:hint="Message"
         android:minLines="8"
-        android:maxLines="8" />
+        android:maxLines="8"/>
+        <!--android:maxLength="140"/>-->
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputPrivateKey"
+        android:layout_below="@+id/messageText"
+        android:layout_centerHorizontal="true"
+        android:hint="Private Key"
+        android:singleLine="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputTxid"
+        android:layout_below="@+id/inputPrivateKey"
+        android:layout_centerHorizontal="true"
+        android:hint="Input Txid"
+        android:singleLine="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputVout"
+        android:layout_below="@+id/inputTxid"
+        android:hint="Vout"
+        android:layout_toLeftOf="@+id/space"
+        android:singleLine="true"
+        android:inputType="number"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputBTC"
+        android:layout_below="@+id/inputTxid"
+        android:hint="BTC"
+        android:layout_toRightOf="@+id/space"
+        android:singleLine="true"
+        android:inputType="number"/>
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Broadcast Transaction"
+        android:text="Broadcast Message"
         android:id="@+id/broadcastButton"
-        android:layout_below="@+id/messageText"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -71,6 +125,8 @@
         android:text="PeerCount"
         android:id="@+id/peerCount"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
