Much improved... AhimsaDB, Utils, FundingService added.

--- a/application/src/main/res/layout/fragment_bulletin.xml
+++ b/application/src/main/res/layout/fragment_bulletin.xml
@@ -11,32 +11,38 @@
     tools:context="io.ahimsa.ahimsa_app.application.fragment.BulletinFragment">
 
     <EditText
-        android:id="@+id/bulletinText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:layout_below="@+id/topicText"
-        android:ems="10"
-        android:layout_centerHorizontal="true"
-        android:hint="Message"
-        android:minLines="8"
-        android:maxLines="8"
-        android:maxLength="140"/>
-
-    <EditText
         android:id="@+id/topicText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:hint="Topic"
-        android:singleLine="true" />
+        android:singleLine="true"
+        />
+
+    <EditText
+        android:id="@+id/messageText"
+        android:hint="Message"
+        android:minLines="8"
+        android:maxLines="8"
+        android:maxLength="140"
+
+        android:layout_below="@+id/topicText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="25"
+        android:layout_centerHorizontal="true"
+        />
+
 
     <Button
+        android:id="@+id/broadcastButton"
+        android:text="Broadcast Message"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Broadcast Message"
-        android:id="@+id/broadcastButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
