--- a/application/src/main/res/layout/fragment_bulletin.xml
+++ b/application/src/main/res/layout/fragment_bulletin.xml
@@ -45,8 +45,8 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_below="@+id/messageText"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
