--- a/application/src/main/res/layout/activity_main.xml
+++ b/application/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:name="io.ahimsa.ahimsa_app.application.fragment.NavigationDrawerFragment"
+        android:name="io.ahimsa.ahimsa_app.application.ui.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
