--- a/application/src/main/res/layout/fragment_create_bulletin.xml
+++ b/application/src/main/res/layout/fragment_create_bulletin.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
-    tools:context="io.ahimsa.ahimsa_app.application.fragment.CreateBulletinFragment">
+    tools:context="io.ahimsa.ahimsa_app.application.ui.CreateBulletinFragment">
 
     <EditText
         android:id="@+id/topicEditText"
