--- a/application/src/main/res/layout/fragment_import_funding_tx.xml
+++ b/application/src/main/res/layout/fragment_import_funding_tx.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
-    tools:context="io.ahimsa.ahimsa_app.application.fragment.ImportFundingTxFragment">
+    tools:context="io.ahimsa.ahimsa_app.application.ui.ImportFundingTxFragment">
 
     <EditText
         android:id="@+id/heightOfBlockEditText"
