--- a/application/src/main/res/layout/fragment_overview.xml
+++ b/application/src/main/res/layout/fragment_overview.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="12dp"
     tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment">
 
 
@@ -181,9 +181,11 @@
         android:paddingRight="30dp"
         android:id="@+id/balance_layout">
 
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -326,14 +328,25 @@
     </LinearLayout>
 
     <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#b0b0b0"
+        android:layout_above="@+id/center"
+        android:id="@+id/horizonal_line_3"
+        ></View>
+
+    <View
         android:id="@+id/center"
         android:layout_width="1dip"
         android:layout_height="1dip"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="#b0b0b0"
+        android:layout_alignTop="@+id/import_block_button"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Import Block"
@@ -345,6 +358,7 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request Coin"
@@ -353,6 +367,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/center" />
+
 
 
 </RelativeLayout>
