--- a/application/src/main/res/menu/main.xml
+++ b/application/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="io.ahimsa.ahimsa_app.ui.MainActivity" >
+      tools:context="io.ahimsa.ahimsa_app.ui.AhimsaActivity" >
 
     <item android:id="@+id/action_create_bulletin"
         android:icon="@drawable/ic_action_chat"
