--- a/application/src/main/res/layout/fragment_create_bulletin.xml
+++ b/application/src/main/res/layout/fragment_create_bulletin.xml
@@ -133,6 +133,7 @@
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:maxLength="500"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:inputType="textMultiLine"
