--- a/application/src/main/res/layout/fragment_overview.xml
+++ b/application/src/main/res/layout/fragment_overview.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="12dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment">
 
 
@@ -188,7 +188,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Unreserved Balance"
+                android:text="Available Balance"
                 android:id="@+id/unreserved_balance_text"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
