--- a/application/src/main/res/layout/fragment_overview.xml
+++ b/application/src/main/res/layout/fragment_overview.xml
@@ -41,6 +41,7 @@
         android:layout_toRightOf="@+id/address_seperator"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
+        android:textColor="#00b0b0"
         />
 
     <!--<ProgressBar-->
