--- a/application/src/main/res/layout/listview_item_bulletin.xml
+++ b/application/src/main/res/layout/listview_item_bulletin.xml
@@ -54,6 +54,7 @@
         android:layout_width="60dip"
         android:layout_height="wrap_content"
         android:text="Details"
+        android:textStyle="italic"
         android:layout_alignTop="@+id/horizonal_line_1"
         android:layout_alignRight="@+id/horizonal_line_1"
         android:layout_alignEnd="@+id/horizonal_line_1"
@@ -64,6 +65,8 @@
         android:layout_width="1dip"
         android:layout_height="1dip"
         android:background="#b0b0b0"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignTop="@+id/details_button"
         android:layout_alignBottom="@+id/details_button"
         android:layout_toLeftOf="@+id/details_button"/>
@@ -75,6 +78,7 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
         android:text="Confirm"
+        android:textStyle="italic"
         android:layout_below="@+id/horizonal_line_1"
         android:layout_toLeftOf="@+id/button_seperator" />
 
@@ -82,6 +86,8 @@
         android:id="@+id/button_seperator_2"
         android:layout_width="1dip"
         android:layout_height="1dip"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#b0b0b0"
         android:layout_alignTop="@+id/confirm_button"
         android:layout_alignBottom="@+id/confirm_button"
@@ -109,6 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Status"
+                android:textStyle="italic"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -118,6 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="question mark"
+                android:textStyle="italic"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"/>
@@ -131,6 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Change"
+                android:textStyle="italic"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -140,6 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="# (#)"
+                android:textStyle="italic"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"/>
@@ -152,10 +162,11 @@
         android:textStyle="italic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="17:35 | Apr 19, 2014"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="17:35  Apr 19, 1993"
+        android:textColor="#00b0b0"
+        android:layout_alignBottom="@+id/topic_value"
+        android:layout_alignRight="@+id/horizonal_line_1"
+        android:layout_alignEnd="@+id/horizonal_line_1" />
 
 
 </RelativeLayout>
