--- a/application/src/main/res/layout/fragment_overview.xml
+++ b/application/src/main/res/layout/fragment_overview.xml
@@ -238,7 +238,8 @@
                 android:id="@+id/unconfirmed_balance_text"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:textColor="#ffc6002c" />
 
             <TextView
                 android:layout_width="wrap_content"
