cryptolina updates: logs, details, etc. starting settings

--- a/application/src/main/res/layout/fragment_bulletin_list.xml
+++ b/application/src/main/res/layout/fragment_bulletin_list.xml
@@ -18,5 +18,5 @@
         android:gravity="center"
         android:textStyle="italic"
         android:textColor="#00b0b0"
-        android:text="No bulletins"/>
+        android:text="No Bulletins"/>
 </LinearLayout>
