--- a/application/src/main/res/layout/fragment_log_list.xml
+++ b/application/src/main/res/layout/fragment_log_list.xml
@@ -1,8 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:paddingLeft="8dp"
+              android:paddingRight="8dp">
+
+    <ListView android:id="@+id/queue_list"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_weight="3"
+              android:drawSelectorOnTop="false"
+              android:divider="@null"
+              android:dividerHeight="0dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#b0b0b0"
+        android:layout_below="@+id/wallet_layout"
+        android:id="@+id/horizontal_line"
+        ></View>
+
+    <ListView android:id="@+id/log_list"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:drawSelectorOnTop="false"
+              android:divider="@null"
+              android:dividerHeight="0dp"/>
+
 
 </LinearLayout>
