--- a/application/src/main/res/layout/fragment_overview2.xml
+++ b/application/src/main/res/layout/fragment_overview2.xml
@@ -438,27 +438,15 @@
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/wireless_connection_value"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:textStyle="bold|italic"
+            android:text="Network Connection Test "/>
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Wireless Connection"
-                android:textStyle="italic"
-                android:gravity="left"/>
 
-            <TextView
-                android:id="@+id/wireless_connection_value"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:textStyle="bold|italic"
-                android:text="OK "/>
-
-        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -468,7 +456,7 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Bitcoin Mainnet"
+                android:text="Bitcoin Testnet"
                 android:textStyle="italic"
                 android:gravity="left"/>
 
@@ -478,7 +466,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="OK "
-                android:textStyle="bold|italic"/>
+                android:textStyle="bold|italic"
+                android:textColor="#ff52ae61"/>
 
         </RelativeLayout>
 
@@ -499,7 +488,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:textStyle="bold|italic"
-                android:text="OK "/>
+                android:text="OK "
+                android:textColor="#ff52ae61"/>
 
         </RelativeLayout>
 
@@ -508,6 +498,21 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="ahimsa.io"
+                android:textStyle="italic"
+                android:gravity="left"/>
+
+            <TextView
+                android:id="@+id/ahimsa_value"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="OK "
+                android:textColor="#ff52ae61"
+                android:textStyle="bold|italic"/>
 
         </RelativeLayout>
 
