--- a/application/src/main/res/layout/fragment_overview2.xml
+++ b/application/src/main/res/layout/fragment_overview2.xml
@@ -562,7 +562,7 @@
         android:text="mpRZxxp5FtmQipEWJPa1NY9FmPsva3exUd"
         android:layout_below="@+id/device_address"
         android:layout_toRightOf="@+id/qr_value"
-        android:textIsSelectable="true"/>
+        android:clickable="true"/>
 
     <View
         android:layout_width="wrap_content"
