--- a/application/src/main/res/layout/activity_main.xml
+++ b/application/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="3dip"
         app:pstsIndicatorHeight="3dip"
-        app:pstsShouldExpand="true"/>
+        app:pstsShouldExpand="true"
+        app:pstsUnderlineHeight="10dip"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
