--- a/application/src/main/res/layout/fragment_overview.xml
+++ b/application/src/main/res/layout/fragment_overview.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment">
+    tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment2">
 
 
     <TextView
