--- a/application/src/main/res/layout/fragment_overview2.xml
+++ b/application/src/main/res/layout/fragment_overview2.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment">
+    tools:context="io.ahimsa.ahimsa_app.ui.OverviewFragment2">
 
     <LinearLayout
         android:id="@+id/address_layout"
@@ -46,7 +46,7 @@
             android:textColor="#00b0b0"
             />
 
-        </LinearLayout>
+    </LinearLayout>
 
 
     <LinearLayout
