--- a/application/src/main/res/layout/fragment_bulletin_list.xml
+++ b/application/src/main/res/layout/fragment_bulletin_list.xml
@@ -10,8 +10,7 @@
         android:layout_weight="1"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:scrollbarStyle="outsideOverlay"
-        android:drawSelectorOnTop="false"/>
+        android:scrollbarStyle="outsideOverlay"/>
 
     <TextView android:id="@id/android:empty"
         android:layout_width="fill_parent"
