--- a/application/src/main/res/menu/create_bulletin.xml
+++ b/application/src/main/res/menu/create_bulletin.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.ahimsa.ahimsa_app.ui.CreateBulletinActivity" >
 
+    <item android:id="@+id/action_camera"
+        android:icon="@drawable/ic_action_camera"
+        android:title="Camera"
+        android:orderInCategory="99"
+        android:showAsAction="ifRoom"
+        />
+
     <item android:id="@+id/action_broadcast_bulletin"
         android:icon="@drawable/ic_action_send_now"
         android:title="@string/action_broadcast_bulletin"
